--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <h2>CALCULADORA</h2>
+      <h2>MINHA PRIMEIRA CALCULADORA</h2>
      <input id="num1" type="text" placeholder="Digite um número">
    <select  id="operacao">
      <option value="">Selecione</option>
